tests/errors/_questions/preprocessor/undefined/elusive_joe1.c
#inc

int main ()
{
	return 0;
}
